<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_create_folder"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/create_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_file"
        android:title="@string/create_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_disconnect"
        android:title="@string/disconnect"
        app:showAsAction="never" />

</menu>
